fuckings ignore den jævla fila plz

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,4 @@ Pixy/gcc/.metadata/.plugins/org.eclipse.cdt.core/video.1425372042218.pdom
 Arduino/SAFF-MEGA 2/Visual Micro/.SAFF-MEGA 2.vsarduino.h
 Arduino/SAFF-MEGA 2/Visual Micro/Compile.vmps.xml
 Arduino/SAFF-MEGA 2/Visual Micro/Configuration.Debug.vmps.xml
+Pixy/gcc/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
