--- a/Brugi/AimBot.vcxproj.filters
+++ b/Brugi/AimBot.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClInclude Include="config_oppsett.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Visual Micro\.Brugi.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
