gitignore for faen

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,5 @@ Arduino/SAFF-MEGA 2/Visual Micro/.SAFF-MEGA 2.vsarduino.h
 Arduino/SAFF-MEGA 2/Visual Micro/Compile.vmps.xml
 Arduino/SAFF-MEGA 2/Visual Micro/Configuration.Debug.vmps.xml
 Pixy/gcc/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Pixy/gcc/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+Pixy/gcc/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
