Trying to send and read

--- a/Desktop/Aimbot(C++)/Aimbot(C++)/Aimbot(C++).vcxproj
+++ b/Desktop/Aimbot(C++)/Aimbot(C++)/Aimbot(C++).vcxproj
@@ -91,6 +91,9 @@
       <DependentUpon>Main.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="reload.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
