--- a/Desktop/Aimbot(C++)/Aimbot(C++)/Aimbot(C++).vcxproj.filters
+++ b/Desktop/Aimbot(C++)/Aimbot(C++)/Aimbot(C++).vcxproj.filters
@@ -27,4 +27,14 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Main.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="reload.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
