Mode select now updated
-Mode select now only has 3 modes, to comply with ORX controller 3 mode
switch

--- a/Arduino/SAFF-MEGA 2/SAFF-MEGA.vcxproj
+++ b/Arduino/SAFF-MEGA 2/SAFF-MEGA.vcxproj
@@ -73,6 +73,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Aimbot_EEPROM.h">
+      <FileType>CppCode</FileType>
+    </ClInclude>
     <ClInclude Include="Aimbot_Serial.h" />
     <ClInclude Include="Visual Micro\.SAFF-MEGA 2.vsarduino.h" />
     <ClInclude Include="Visual Micro\.SAFF-MEGA.vsarduino.h" />
