--- a/Arduino/SAFF-MEGA 2/SAFF-MEGA.vcxproj.filters
+++ b/Arduino/SAFF-MEGA 2/SAFF-MEGA.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Aimbot_Serial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Aimbot_EEPROM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="SAFF-MEGA.ino" />
