ESC RC mode bugfix and MEGA timelapse added
ESC RC mode bugfix( only one speed bug) and MEGA timelapse added

--- a/Arduino/SAFF-MEGA 2/SAFF-MEGA.vcxproj.filters
+++ b/Arduino/SAFF-MEGA 2/SAFF-MEGA.vcxproj.filters
@@ -30,5 +30,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="SAFF-MEGA.ino" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
