Added array parser for ESC unit tester

--- a/Brugi/unit tester/no serial ESC test/AimBot.vcxproj.filters
+++ b/Brugi/unit tester/no serial ESC test/AimBot.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClInclude Include="Visual Micro\.unit tester.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Visual Micro\.no serial ESC test.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
